fix(collapse): height exception when nested

--- a/src/packages/components/collapse-item/collapse-item.scss
+++ b/src/packages/components/collapse-item/collapse-item.scss
@@ -33,7 +33,7 @@
     transform: scaleY(0.5);
   }
 
-  &--expanded &__title {
+  &--expanded > &__title {
     @include _setVar(cell-icon-right-rotate, -90deg);
   }
 
