--- a/src/packages/components/collapse/collapse.scss
+++ b/src/packages/components/collapse/collapse.scss
@@ -1,5 +1,7 @@
 @import '../../styles/vars.scss';
 .#{$prefix}-collapse {
+  position: relative;
+  
   &--border::after {
     position: absolute;
     box-sizing: border-box;
