feat: Add textarea component styles, initialize UniApp play environment, and introduce a versioning script.

--- a/packages/papayaui/components/textarea/textarea.scss
+++ b/packages/papayaui/components/textarea/textarea.scss
@@ -6,7 +6,7 @@
   position: relative;
   display: flex;
   width: 100%;
-  background-color: #fff;
+  background-color: _var(textarea-background-color, #fff);
   padding: _var(textarea-padding, 10px 25px);
   font-size: _var(textarea-font-size, 14px);
   color: _var(textarea-color, _var(color-black));
