--- a/packages/papayaui/components/switch/switch.scss
+++ b/packages/papayaui/components/switch/switch.scss
@@ -1,54 +1,62 @@
 @import '../../styles/vars.scss';
 .#{$prefix}-switch {
-  $duration: 0.4s;
-  $defaultBgColor: #e6e6e6;
-  $nodeSize: 24px;
-  $gap: 4px;
+  @include _setVar(switch-default-bg-color, #e6e6e6);
+  @include _setVar(switch-node-size, 24px);
+  @include _setVar(switch-gap, 4px);
+  @include _setVar(switch-width, calc(#{_var(switch-node-size)} * 2 + #{_var(switch-gap)}));
+  @include _setVar(switch-duration, 0.4s);
 
   position: relative;
   display: inline-flex;
   align-items: center;
-  font-size: _var(switch-size, $nodeSize);
-  width: calc(2em + $gap);
-  padding: $gap 0;
-  background-color: $defaultBgColor;
+  font-size: _var(switch-size, #{_var(switch-node-size)});
+  width: _var(switch-width);
+  padding: _var(switch-gap) 0;
+  background-color: _var(switch-default-bg-color);
   border-radius: 100px;
-  transition: background-color $duration;
+  transition: background-color _var(switch-duration);
+
   &__bg {
     position: absolute;
     top: 0;
     right: 0;
     width: calc(100% - (1em / 2));
     height: 100%;
-    background-color: $defaultBgColor;
+    background-color: _var(switch-default-bg-color);
     border-radius: 100px;
     transform: scale(1);
-    transition: transform $duration ease;
+    transition: transform _var(switch-duration) ease;
   }
+
   &__node {
     width: 1em;
     height: 1em;
     padding: 3px;
     background-color: #fff;
     border-radius: 50%;
-    transform: translateX($gap);
-    transition: transform $duration cubic-bezier(0.3, 1.05, 0.4, 1.05);
+    transform: translateX(#{_var(switch-gap)});
+    transition: transform _var(switch-duration) cubic-bezier(0.3, 1.05, 0.4, 1.05);
 
     display: flex;
     align-items: center;
     justify-content: center;
   }
+
   &--on {
     background-color: _var(color-primary);
     border-color: _var(color-primary);
   }
+
   &--on &__bg {
     transform: scale(0);
   }
+
   &--on &__node {
     background-color: #fff;
-    transform: translateX(100%);
+    // 正确计算 node 在开启状态下的位置：总宽度 - node 大小 - 两边的 gap
+    transform: translateX(calc(#{_var(switch-width)} - 1em - #{_var(switch-gap)}));
   }
+
   &--disabled {
     opacity: 0.6;
   }
